--- a/src/scss/components/_overlays.scss
+++ b/src/scss/components/_overlays.scss
@@ -3,6 +3,7 @@
 
     background-color: _color(white);
     left: 50%;
+    max-height: 100%;
     max-width: 50rem;
     padding: 3rem 2.5rem 2.5rem;
     position: fixed;
