--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,7 @@
    Master Stylesheet.
 
    Project:       ResolutionTester9000
-   Version:       1.0.0
+   Version:       1.1.0
    Contributors:  Sebastian Prein <hi@sebastianprein.com>
    URL:           http://sebastianprein.com
    -------------------------------------------------------------------------- */
@@ -40,6 +40,7 @@
 @import "components/screens";
 @import "components/forms";
 @import "components/pickers";
+@import "components/groups";
 
 
 /* -----------------------------------------------------------------------------
