--- a/src/scss/sections/_site-header.scss
+++ b/src/scss/sections/_site-header.scss
@@ -27,6 +27,10 @@
         padding: 1rem;
         text-align: center;
         width: 50%;
+
+        > .plain-input {
+            width: 100%;
+        }
     }
 
     > .addscreen {
